@@ -3,6 +3,9 @@ Hadoop YARN Change Log
 Release 2.8.0 - UNRELEASED
 
   INCOMPATIBLE CHANGES
+  
+    YARN-2336. Fair scheduler's REST API returns a missing '[' bracket JSON for
+    deep queue tree. (Kenji Kikushima and Akira Ajisaka via ozawa)
 
   NEW FEATURES
 
